--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
 * ----------------------------------------------------------------------------------------
-Author       : Mannat Themes
-Template Name: Ultra - Responsive Resume & CV Template
+Author       : XXX
+Template Name: XXX
 Version      : 1.0
 * ----------------------------------------------------------------------------------------
 */
